kapidox (4.100.0-0ubuntu1) UNRELEASED; urgency=medium

  [ Jonathan Riddell ]
  * New upstream beta release

  [ Scarlett Clark ]
  * Bump depends versions

  [ Harald Sitter ]
  * Remove useless Pre-Depends fields used for multiarch compat in
    releases older than trusty

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:33:23 +0100

kapidox (4.99.0-0ubuntu1) trusty; urgency=medium

  * New upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 05 May 2014 15:39:51 +0100

kapidox (4.98.0-0ubuntu1) trusty; urgency=medium

  * New upstream alpha release
  * Rename library package for soname 5
  * New upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Sat, 29 Mar 2014 10:22:33 +0000

kapidox (4.96.0-0ubuntu1~ubuntu14.04~ppa2) trusty; urgency=medium

  * Add missing python support

 -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Thu, 13 Feb 2014 09:03:46 -0800

kapidox (4.96.0-0ubuntu1~ubuntu14.04~ppa1) trusty; urgency=medium

  * New upstream alpha release

 -- Rohan Garg <rohangarg@kubuntu.org>  Tue, 11 Feb 2014 18:32:47 +0100

kapidox (4.95.0-0ubuntu1) trusty; urgency=low

  * Initial release

 -- Scarlett Clark <scarlett@scarlettgatelyclark.com>  Thu, 30 Jan 2014 08:16:49 +0000