@@ -5,9 +5,11 @@ include /usr/share/pkg-kde-tools/qt-kde-team/2/debian-qt-kde.mk
 
 export PYBUILD_NAME=kapidox
 
-dh $@ --with python2,python3 --buildsystem=pybuild 
+%:
+	dh $@ --with python2,python3 --buildsystem=pybuild 
 
 override_dh_auto_install:
 	python setup.py install --root=debian/kapidox --install-layout=deb --install-data=/usr/share/kapidox --install-lib=/usr/share/kapidox --install-scripts=/usr/share/kapidox 
-	dh_python2	
+	dh_python2
+
 override_dh_auto_build:
