@@ -10,6 +10,9 @@ kapidox (4.100.0-0ubuntu1) UNRELEASED; urgency=medium
   * Remove useless Pre-Depends fields used for multiarch compat in
     releases older than trusty
 
+  [ José Manuel Santamaría Lema ]
+  * Fix debian/rules so the package is buildable again.
+
  -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 02 Jun 2014 13:33:23 +0100
 
 kapidox (4.99.0-0ubuntu1) trusty; urgency=medium
